fix dynamic wrapping of cards

--- a/style.css
+++ b/style.css
@@ -4,26 +4,23 @@
   padding: 0;
 }
 
-#content {
-  min-width: 800px;
-}
-
 #welcome-section {
   height: 100vh;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0;
 }
 
-.card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
+#name {
+  font-size: 10vh;
+  font-weight: 400;
 }
-.card {
-  margin: 20px 0px;
+
+#desc {
+  font-size: 4vh;
+  font-style: oblique;
 }
 
 .title {
@@ -31,23 +28,49 @@
   color: rgba(248, 247, 245, 0.7);
 }
 
-#projects {
-  grid-column-gap: 24px;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-  text-align: center;
-  height: 100vh;
+#project-container {
+  background-color: rgba(0, 128, 128, 0.8);
+  padding: 20px;
+  width: 100%;
 }
 
-.project-container {
-  height: 100%;
-  background-color: rgba(0, 128, 128, 0.8);
+#projects {
   padding: 30px;
-  align-items: center;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 30px;
+  justify-content: center;
+}
+
+.card {
+  max-width: 25rem;
+  min-width: 18rem;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
 }
 
 .contact-container {
+  padding: 30px;
   height: 15vh;
   background-color: #212529;
+}
+
+@media (max-width: 1200px) {
+  #projects {
+    grid-template-columns: repeat(2, auto);
+  }
+  #project-container {
+    min-height: 1000px;
+  }
+}
+
+@media (max-width: 600px) {
+  #projects {
+    grid-template-columns: repeat(1, auto);
+  }
 }
